fix: fix text color visibility on dark background

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,11 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+
+  background: url('/bg-stars.jpg') !important;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 h1 {
@@ -60,16 +65,14 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    /* color: #white; */
+    background-color: #000;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
 }
+
+  
+
 
 @keyframes shooting-star {
   0% {
